<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calculate"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginBottom="36dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="49dp"
        android:text="@string/textViewOut"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="324dp"
        android:text="@string/btn3"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="324dp"
        android:text="@string/btn2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="324dp"
        android:text="@string/btn1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="232dp"
        android:text="@string/btn4"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="224dp"
        android:text="@string/btn5"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="224dp"
        android:text="@string/btn6"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn7"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn8"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn9"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btn0"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="324dp"
        android:text="@string/plus"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>